[package]
name = "tugger-device"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
esp-idf-svc = { version = "0.48", features = [
    "critical-section",
    "std",
    "embassy-sync",
] }
esp-idf-hal = "0.43"
embedded-svc = "0.27"
embedded-graphics = "0.8"
embedded-hal = "1.0"
embedded-hal-bus = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Display
epd-waveshare = "0.6.0"
# LoRa
lora-phy = "3"
display-interface = "0.4"
display-interface-spi = "0.5"

[build-dependencies]
embuild = "0.31"
